Fix of long unwrapping messages, closes #13

--- a/src/static/css/chat.css
+++ b/src/static/css/chat.css
@@ -86,6 +86,8 @@ button:hover {
     min-height: 40px;
     margin: 8px;
     border-radius: 14px;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 .current_user {
